--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -8,11 +8,11 @@
 
   .container {
     position: relative;
-    width: 95%;
+    width: 90%;
     height: 90vh;
     margin: auto;
     background-color: $color-white;
-    box-shadow: 0 1.5rem 3rem $color-black;
+    box-shadow: 0 1rem 1.5rem $color-black;
     &__slide {
       width: max-content;
       margin-top: 5rem;
@@ -27,7 +27,7 @@
   @include respond(phone) {
     width: 35%;
     height: 50%;
-    transform: translate(20%, -50%);
+    transform: translate(22.5%, -50%);
   }
 
   @include respond(tab-port) {
@@ -127,7 +127,7 @@
   .content {
     position: absolute;
     top: 50%;
-    left: 5rem;
+    left: 2.5rem;
     width: 30rem;
     text-align: left;
     padding: 0;
@@ -137,18 +137,20 @@
 
     @include respond(phone) {
       width: 35%;
+      left: 1.5rem;
     }
 
     @include respond(tab-port) {
       width: 35%;
+      left: 1.5rem;
     }
 
     @include respond(desktop) {
-      left: 10rem;
+      left: 5rem;
     }
 
     @include respond(big-desktop) {
-      left: 10rem;
+      left: 5rem;
     }
   }
 }
